--- a/config/config.env
+++ b/config/config.env
@@ -4,7 +4,7 @@ PORT = 4000
 DB_URI = "mongodb+srv://debasishrana1452003:debasishrana@amazekartclust.a0ktqjl.mongodb.net/AmazeKartDatabase?retryWrites=true&w=majority&appName=amazeKartClust"
 
 
-FRONTEND_URL = "http://localhost:3000"
+# FRONTEND_URL = "http://localhost:3000"
 
 
 
