--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "ecommerce",
   "version": "1.0.0",
   "description": "",
-  "main": "backend/server.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node backend/server.js",
-    "dev": "nodemon backend/server.js"
+    "start": "node server.js",
+    "dev": " nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -29,3 +29,5 @@
     "validator": "^13.9.0"
   }
 }
+
+
